Fixes bug where we only added sampled true